--- a/client/src/pages/notification/notification.css
+++ b/client/src/pages/notification/notification.css
@@ -1,4 +1,11 @@
 .notification{
     background: #fff;
     padding: 30px;
+    border-radius: 5px;
+}
+.notification-rows{
+    text-align: right;
+}
+.notification-h4{
+    color: royalblue;
 }
