--- a/client/src/composants/docteurList/docteurList.css
+++ b/client/src/composants/docteurList/docteurList.css
@@ -1,11 +1,17 @@
 .docteurList{
-    background: #fff;
-    border-radius: 5px;
     cursor: pointer;
+    color: black;
+    width: 200px;
+}
+.docteurList:hover{
+    transform: scale(1.1);
 }
 .docteur-header{
-    background: rgba(172, 170, 170, 0.425);
+    background: #f2f2f2;
     padding: 10px 15px;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    border-radius: 5px;
 }
 .docteur-body{
     padding: 15px;
