--- a/client/src/composants/layout/layout.css
+++ b/client/src/composants/layout/layout.css
@@ -7,9 +7,18 @@
     width: 300px;
     height: 100%;
     color: #e1e9fc;
-    box-shadow: 0 0 2px gray;
     border-radius: 5px;
-    background: #15171C;
+/*     background: #15171C; */
+    background: #111827;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+}
+.layout-img-title{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin: 10% 30%;
+    border: 5px solid #e1e9fc;
 }
 .layout-title{
     text-align: center;
@@ -57,7 +66,9 @@
 .layout-top{
     height: 60px;
     background: #fff;
-    box-shadow: 0 0 2px gray;
+ /*    box-shadow: 0 0 2px gray; */
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
 }
 .layout-top{
     display: flex;
@@ -69,6 +80,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    cursor: pointer;
 }
 .layout-rows{
     display: flex;
