--- a/client/src/pages/admin/admin.css
+++ b/client/src/pages/admin/admin.css
@@ -1,10 +1,24 @@
-.users{
+.users,.docteur{
     background: #fff;
     padding: 30px;
-    border-radius: 5px;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
 }
 .users-h1{
     text-align: center;
     font-size: 1.5rem;
     margin-bottom: 20px;
 }
+.action-btn{
+    border: none;
+    padding: 8px;
+    background: green;
+    color: #fff;
+    border-radius: 5px;
+    font-size: 13px;
+    cursor: pointer;
+}
+.red{
+    background: rgb(153, 4, 4);
+  }
