--- a/client/src/pages/appDoctor/appDoctor.css
+++ b/client/src/pages/appDoctor/appDoctor.css
@@ -2,6 +2,8 @@
     background: #fff;
     padding: 40px;
     border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
 }
 .appDoctor-h1{
     text-align: center;
