--- a/client/src/pages/bookRdv/bookRdv.css
+++ b/client/src/pages/bookRdv/bookRdv.css
@@ -5,6 +5,8 @@
     justify-content: center;
     flex-direction: column;
     background: #fff;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
     padding: 50px;
     border-radius: 5px;
     gap: 20px;
