--- a/client/src/pages/docteur/profile.css
+++ b/client/src/pages/docteur/profile.css
@@ -1,7 +1,9 @@
 .profile{
     padding: 30px;
     background: #fff;
-    border-radius: 5px;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
     width: 100%;
 }
 .profile-h1{
