--- a/client/src/pages/notification/notification.css
+++ b/client/src/pages/notification/notification.css
@@ -1,11 +1,28 @@
 .notification{
     background: #fff;
-    padding: 30px;
-    border-radius: 5px;
+    padding: 40px;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
 }
 .notification-rows{
     text-align: right;
 }
 .notification-h4{
     color: royalblue;
+    cursor: pointer;
+}
+.notification-text{
+    cursor: pointer;
+    padding: 8px;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    /* background: rgb(192, 191, 191); */
+    margin: 8px 0;
+    color: royalblue;
+    border-radius: 5px;
+}
+.notification-text:hover{
+    background: rgb(192, 191, 191);
+    color: black;
 }
