--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -8,7 +8,8 @@
     width: 360px;
     padding: 2rem;
     border-radius: 1rem;
-    box-shadow: 0px 10px 25px rgba(92,99,105,.5);
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
 }
 .text-center{
     font-size: 2.5rem;
