--- a/client/src/pages/rendezVous/rdv.css
+++ b/client/src/pages/rendezVous/rdv.css
@@ -1,5 +1,7 @@
 .rdv{
     background: #fff;
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 40px;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
 }
